# DiffSolver

./: .gitignore  README.md  bc.py  formulate.py  newton.py  pyproject.toml  rk.py  step.py  tableau.py
diffsolver/: __init__.py  bc.py  formulate.py  newton.py  rk.py  stencil.py  step.py  tableau.py
diffsolver/graph/: graph.py
diffsolver/ops/: __init__.py  arithmatic.py  constant.py  divergence.py  heaviside.py  lapacian.py  nderiv.py  op_tys.py  operators.py
ops/: arithmatic.py  heaviside.py  lapacian.py  operators.py
tests/: test_1dwave.py  test_const.py  test_heat.py  test_plot.py  test_step.py  test_wave.py
