[project]
name = "DiffSolver"
version = "0.0.1"
authors = [
  { name="SY", email="author@example.com" },
]

description = "JAX based MOL Solver"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling", "jax"]
build-backend = "hatchling.build"


# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"